# Baller

./: .gitignore  README.md
esp_idf/: CMakeLists.txt  sdkconfig
esp_idf/.cache/clangd/index/: main.cpp.0070481732A0AFCE.idx
esp_idf/components/I2C/: CMakeLists.txt  I2C.cpp
esp_idf/components/I2C/include/: I2C.hpp
esp_idf/components/MPU6050/: CMakeLists.txt  MPU6050.cpp
esp_idf/components/MPU6050/include/: MPU6050.hpp  mpu6050_types.hpp
esp_idf/main/: CMakeLists.txt  baller_esp_idf.cpp
ros2/: flake.nix
ros2/src/baller_cpp_ros/: CMakeLists.txt  compile_commands.json  package.xml
ros2/src/baller_cpp_ros/src/: robot_controll.cpp
ros2/src/robot_controll/: CMakeLists.txt  package.xml
ros2/src/transmitter/: CMakeLists.txt  package.xml
serial_msg/: CMakeLists.txt  compile_commands.json  flake.nix
serial_msg/include/: MessageManager.hpp
serial_msg/src/: MessageManager.cpp
stm32/: .clangd  Baller.ioc  CMakeLists.txt  CMakePresets.json  compile_commands.json  flake.nix  openocd.cfg
stm32/Core/Inc/: main.h
stm32/Core/Src/: main.c  stm32f4xx_hal_msp.c
stm32/src/: main.cpp
